/*
 * $Id: ChangeLog,v 1.2489 2004/03/04 22:30:06 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-04 21:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/regex.c
    ! Fixed typo in Wild2RegEx() related to '?'

  * source/vm/arrays.c
    ! Fixed memory leak related to Owners and hb_clsFinalize()

  * source/vm/memvars.c
    + Added logic to utilize Wild2RegEx() sincehb_strMatchRegExp() now expect real RegEx.

2004-03-05 05:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    % Ref my previous changes. I commited the wrong file :(.
      The correct one now commited.

2004-03-05 04:55 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/hbffind.c
    ! minor fix to be more Clipper compatible when Directory( "C:", "V" )

  * source/rtl/direct.c
    ! make sure label attribute is stripped-out in second loop when argument
      "V" is passed during Directory() operation.
    % more optimization on regex compiling by using proprietary static function

2004-03-05 10:57 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/mysql/mysql.c
    ! HB_FUNC(SQLFETCHR) fix to use hb_itemPutCL() not hb_itemPutC()
        ( previously truncated data containing embedded CHR(0) i.e. binary data )
    - HB_FUNC(DATATOSQL) & HB_FUNC(FILETOSQLBINARY) optimised, added error checking
                and option to use mysql_real_escape_string() by passing second
                parameter ( (MYSQL *) )

2004-03-04 15:09 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/vm/hbini.prg
    ! Fixed problems when write an INI file.

2004-03-04 20:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/hbzlib/zip.c
    ! minor fix in creating array of files when skleton is not passed during
      unzip operation.

2004-03-04 01:37 UTC-0800 Ron Pinkas <ron@ronpinkas.com>