@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2489 2004/03/04 22:30:06 andijahja Exp $
+ * $Id: ChangeLog,v 1.2490 2004/03/05 05:06:51 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-03-05 13:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/vm/memvars.c
+    ! fix memory leak in __MVSYMBOLINFO()
+    % some left out optimization using HB_ITEM
 
 2004-03-04 21:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/regex.c
